<resources>
    <string name="app_name">CashRegister 4.0 Demo App</string>
    <string name="products_title">Available Products</string>
    <string name="bill_title">Current receipt</string>
    <string name="discount_applied_percent">DISCOUNT PERCENT %.2f%% Total DISCOUNT %.2f €</string>
    <string name="receipt_total">TOTAL %.2f €</string>
    <string name="add_discount_on_total">ADD DISCOUNT ON TOTAL</string>
    <string name="total_discount">TOTAL DISCOUNT</string>
    <string name="discount_percent">DISCOUNT PERCENT</string>
    <string name="barcode">Barcode</string>
    <string name="product">Product</string>
    <string name="brand">Brand</string>
    <string name="price">Price per unit (€)</string>
    <string name="receipt_printed_ok">Receipt printed!</string>
    <string name="receipt_printed_ko">Error in printing receipt</string>
    <string name="receipt_printed_ko_message">The list must NOT be empty</string>
    <string name="receipt_printed_ko_message_about_connection">The device must be connected</string>
    <string name="receipt_dialog_title">PRINTED RECEIPT</string>
    <string name="delete_product_dialog_title">Product deletion</string>
    <string name="delete_product_dialog_message">Do you want to delete this product?</string>
    <string name="delete_all_products_dialog_title">All Products deletion</string>
    <string name="delete_all_products_dialog_message">Do you want to delete all Products?</string>
    <string name="delete_discount_dialog_title">Discount Deletion</string>
    <string name="delete_discount_dialog_message">Do you want to delete the current Discount?</string>
    <string name="delete_all_inputs_dialog_message">Do you want to delete all inputs?</string>
    <string name="insert_new_product">Insert new Product</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_items_available">No Items Available</string>
    <string name="must_fill_all_fields">All fields must be filled</string>
    <string name="print_receipt">PRINT RECEIPT</string>
    <string name="add_discount">ADD DISCOUNT</string>
    <string name="brand_string">(%s)</string>
    <string name="presentation_total">Total: %.2f €</string>
    <string name="welcome">WELCOME!</string>
    <string name="presentation_product">%s %.2f €</string>
    <string name="print_promo_20">Print Promo 20%</string>
    <string name="print_promo_40">Print Promo 40%</string>
    <string name="qr_code_not_found_title">QrCode not found</string>
    <string name="qr_code_not_found_message">QrCode not found, try again</string>
    <string name="qr_code_store_error_title">Store error</string>
    <string name="qr_code_store_error_message">Probably this discount belongs to another store</string>
    <string name="qr_code_already_used_title">Discount already used</string>
    <string name="qr_code_already_used_message">This discount is already used. Buy something and get another one!</string>
    <string name="qr_code_expired_title">Discount is expired</string>
    <string name="qr_code_expired_message">This discount is expired. Buy something and get another one!</string>
    <string name="last_created_coupon">Last Created Coupon</string>
    
    <string name="present_code_to_shop">Present this code to the shop</string>
    <string name="to_get_discount">to get your discount</string>


    //FAB Menu
    <string name="fab_menu_add_discount">Add Discount</string>

    //QrCode stuff
    <string name="waiting_for_qr_code_scan">Waiting for QrCode scan&#8230;</string>
    
    //MENU
    <string name="diagnostics">DIAGNOSTICS</string>
    <string name="connect">CONNECT</string>
    <string name="last_responses">Last Responses</string>
    <string name="get_status_printer">GetStatusPrinter</string>
    <string name="get_info_printer">GetInfoPrinter</string>
    <string name="get_status_fiscmod">GetStatusFiscmod</string>
    <string name="void_fiscmod">VoidFiscmod</string>
    <string name="settings">SETTINGS</string>
    <string name="set_ip_and_port">SET IP AND PORT</string>
    <string name="set_configuration_data">SET CONFIGURATION DATA</string>
    <string name="set_cashier_name">SET CASHIER NAME</string>
    <string name="set_header">SET HEADER</string>
    <string name="set_coupon_type">BARCODE (Unchecked)/QRCODE (Checked)</string>

    //Responses Activity
    <string name="responses">RESPONSES</string>
    <string name="dismiss">DISMISS</string>

    //Config
    <string name="ip">IP</string>
    <string name="port">PORT</string>
    <string name="queue_delay">QUEUE DELAY</string>
    <string name="connection_timeout">CONNECTION TIMEOUT</string>
    <string name="connection_retries">CONNECTION RETRIES</string>
    <string name="header_first_line">HEADER FIRST LINE</string>
    <string name="header_second_line">HEADER SECOND LINE</string>
    <string name="header_third_line">HEADER THIRD LINE</string>
    <string name="header_fourth_line">HEADER FOURTH LINE</string>
</resources>
