<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/queueDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/queue_delay"
        android:inputType="number" />

    <EditText
        android:id="@+id/connectionTimeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/connection_timeout"
        android:inputType="number" />

    <EditText
        android:id="@+id/connectionRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/connection_retries"
        android:inputType="number" />

</LinearLayout>